Add favicon and collect static files

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DATABASE_USER=django
 DATABASE_PASSWORD=django123
 DATABASE_HOST=db
 DATABASE_PORT=3306
+SECRET_KEY=2ug4-teqyjx2t@c_b9%#*g_b)t*=65&up0-nu!ds^xr58geq$5
